Add JMH and bump version