@@ -1,10 +1,13 @@
+import me.champeau.jmh.JMHTask
+
 plugins {
     id("java")
     application
+    id("me.champeau.jmh") version "0.7.2"
 }
 
 group = "me.flame.turboscanner"
-version = "1.1.0"
+version = "1.2.0"
 
 java {
     toolchain {
@@ -17,6 +20,9 @@ repositories {
 }
 
 dependencies {
+    jmh("org.openjdk.jmh:jmh-core:1.37")
+    jmhAnnotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:1.37")
+
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -45,4 +51,23 @@ tasks.withType<JavaCompile>().configureEach {
             "--add-modules", "jdk.incubator.vector"
         )
     )
+}
+
+jmh {
+    javaLauncher.set(
+        javaToolchains.launcherFor {
+            languageVersion.set(JavaLanguageVersion.of(17))
+        }
+    )
+
+    jvmArgs.add("--add-modules=jdk.incubator.vector")
+
+    warmupIterations.set(5)
+    iterations.set(10)
+    fork.set(2)
+
+    timeUnit.set("ns")
+    benchmarkMode.set(listOf("thrpt", "avgt"))
+
+    resultFormat.set("JSON")
 }
